// Needed to proto2 rather than proto3 to get pointer field for PermArg
syntax = 'proto3';

option go_package = "github.com/hyperledger/burrow/rpc";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "crypto.proto";
import "tendermint.proto";
import "google/protobuf/timestamp.proto";

package rpc;

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;

message ResultStatus {
    string ChainID = 1;
    bytes GenesisHash = 4 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
    tendermint.NodeInfo NodeInfo = 2;
    string NodeVersion = 3;
    crypto.PublicKey PublicKey = 5 [(gogoproto.nullable) = false];
    bytes LatestBlockHash = 6 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
    uint64 LatestBlockHeight = 7;
    // Unix

    google.protobuf.Timestamp LatestBlockTime = 8 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

